<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory android:title="@string/about_header_info">
    <Preference
        android:key="about_version"
        android:title="" />
    <Preference
        android:key="about_versionHistory"
        android:title="@string/about_versionhist" />
    <Preference
        android:key="about_privacyPolicy"
        android:title="@string/about_privacypol" />
    <Preference
        android:key="about_email"
        android:title="@string/about_email" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_header_imgwebsites">
    <Preference
        android:key="about_imgs"
        android:title="@string/about_imgsources" />
        <Preference
            android:key="about_sfn"
            android:title="@string/about_sfn" />
        <Preference
            android:key="about_sn"
            android:title="@string/about_sn" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_header_licenses">
        <Preference
            android:key="about_lclock"
            android:title="@string/about_lclock"/>
        <Preference
            android:key="about_glide"
            android:title="@string/about_glide" />
        <Preference
            android:key="about_MSV"
            android:title="@string/about_msv" />
    </PreferenceCategory>

</PreferenceScreen>
